Avoiding pixelation of images on mobiles screens
- HTML table auto stretching logo within cell: max-width added.

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,6 @@ th {
 }
 
 td img {
-  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -90,9 +89,14 @@ td img {
   display: inline;
 }
 
-.img {
-  max-width: 90%;
-  max-height: 90%;
+.teamcard-logo {
+  max-width: 92%;
+  max-width: 92%;
+}
+
+.table-logo {
+  max-width: 50%;
+  max-height: 50%;
 }
 
 @media (min-width: 450px) {
@@ -103,7 +107,8 @@ td img {
   th {
     padding: 1em;
   }
-  .img {
+  .teamcard-logo,
+  .table-logo {
     max-width: 100%;
     height: auto;
   }
